--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -2,9 +2,9 @@
 layout:     post
 title:      Data Analysis
 subtitle:   Assignment 2
-date:       2018-09-04
+date:       2018-09-12
 author:     Jonathan
-header-img: img/post-bg-FirstTry-2018.jpg
+header-img: img\2018-09-12-ASS2\Background.png
 catalog: true
 tags:
     - ASS2
