--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -4,7 +4,7 @@ title:      Data Analysis
 subtitle:   Assignment 2
 date:       2018-09-12
 author:     Jonathan
-header-img: img\2018-09-12-ASS2\Background.png
+header-img: img\2018-09-12-ASS2\Background.jpg
 catalog: true
 tags:
     - ASS2
