--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -9,7 +9,7 @@ catalog: true
 tags:
     - ASS2
 ---
-The Dink family has always been a hot topic in social issues. This problem is often referred to as "small child", which is the Low birth rate. The Australian Bureau of Statistics (ABS) said that by 2036, the Dinks will surpass the traditional nuclear family. This analysis will focus the relationship between the number of new born children and family weekly income.
-End.
+# Data Analysis Web
+https://www.ass2.jonathan1230.top/analysis
   
     
