--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -10,6 +10,6 @@ tags:
     - ASS2
 ---
 # Data Analysis Web
-https://www.ass2.jonathan1230.top/analysis
+[Data Analysis](https://www.ass2.jonathan1230.top/analysis)
   
     
