--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -11,5 +11,9 @@ tags:
 ---
 # Data Analysis Web
 [Data Analysis](https://www.ass2.jonathan1230.top/analysis)
-  
+
+# Analysis method
+In this page, you will know the method for processing raw data which has been used in [Data Analysis](https://www.ass2.jonathan1230.top/analysis) step by step.
+
+
     
