--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -15,5 +15,44 @@ tags:
 # Analysis method
 In this page, you will know the method for processing raw data which has been used in [Data Analysis](https://www.ass2.jonathan1230.top/analysis) step by step.
 
+# Process G24 in 2011 and 2016
+Firstly, G24 is a dataset about the number of children ever born.
+
+![EXCELSCREENSHOT](https://previews.dropbox.com/p/thumb/AAIz4q-DxmxfFu8KnGE0G9b5cXVXifGB3PbX0t1y7DulMO8EQzHlHKqWZE57Da094r3yNVdLQ2WYRTje-PP0INR3Zgt5U6ZEdAfm64zXYrRxKwAtugu2AaRD44eghjJF2NCrBaBUANBCvcNmxGvq35e31YnXiiWpa_CWAgynWt7PkhY7jq2LidOieLnRBDo9C4Q/p.jpeg?size=1280x960&size_mode=3)
+In this picture, it can be seen that there are the data of number of children ever born by the age group so that the first thing I do is use the number of parent that ever born multiply the number of children they ever born. 
+
+For example
+![2](https://previews.dropbox.com/p/thumb/AAIrBgX4v2Cu1_Pb6cFnksfRuNKFGHY8OKQ7z9zQV5RZGwOGWfaGkinzalBQ97kLjmChV595HoNF8b3IOFg3DUI8sACjYMOuKsaSQgWLB1hy9UX7ovMrcWxsnaRkovwAd1skLus-rpMY84G7Nur_sz4cu2BQO7Fpg_qC-JSPXe2DHg/p.jpeg?size=1280x960&size_mode=3)
+
+Then, sum the number of the children ever born to get the total children they ever born in each region and do the same steps in both 2011 and 2016's G24. In this way, you will get the total number of children ever born in each region. By minus them, the new born children in each region will be shown.
+
+## How to minus the data
+Because of there are some missing region in 2011_g24, which means they can not simply minus the data by the order of column.
+![3](https://previews.dropbox.com/p/thumb/AAIKKnH0wLx_DH96TQ2pbr4hHIus0_ONmhHzq1F9WGd8cCk3epxMThvtSwxM5CsERPRIKuM0iVAHepHnFbcneybuKIBj0cyVGdkWeL7cRz3YBuMc7hKepJPVTpuYcLjRgp6BKcahPfT9QhzbVDp3sAVLazUZXRI2czPAf8L2cxRgWRSKecK-bLA76KMy--Oh3cA/p.jpeg?size=1280x960&size_mode=3)
+
+In this way, i will use VLookup Function to match the data by the region first.
+![4](https://previews.dropbox.com/p/thumb/AAJ35JbeeJmo9RanPU-AFhoPAnUOYO63QWCsU9VyWSjRkCKShitwfktYe3Atu4dENHXlcZJwuFAcw5g4lJZBf2ANCs0ZnGXl4Ej6dz_hKgeujO3_7DDK9z2h4diFYHydTp__cWaPFfZc7ZC9HqZkyrYcNMSaGE0kvAj72Lr-GHhygRGtpJcvqKRHT40FiTVCLnw/p.jpeg?size=1280x960&size_mode=3)
+
+Now, all the data from 2011 has been filled in the right place by the order of region_id. 
+![5](https://previews.dropbox.com/p/thumb/AAKx0Ro24_Bj4VAX3bFTeHr332r7CIrijSZfximpcTcc0SkKsrU1Tai5HeYhQm0AcY4la0bkXVdS17Lbs9g-fp-4YCepKv2PS5vSjYquoJI69_qJ4j52K2gbsyfrD3C0Heib9ISvcqc39_BVEYsTTuMYuB8kGz16ZLarDHx7QGkbmGgmfdBMmur8eKZeImBE9uM/p.jpeg?size=1280x960&size_mode=3)
+
+Then, I deleted the dataset of 2011 and minus them to get the result of comparison.
+![6](https://previews.dropbox.com/p/thumb/AAJvDihzE5vAdMPsA1Vaw53DcHQIBfuLJMIJO9NAEmIsr7lVNYKNmuzv_DRICn2YovoPqbs4ro0njRCMJ3RAVQcHvWGiEJEb_v2QTM_KOXEKVfmHDknSZj_KH0SYygyQx6686Bk_e8Xd5UVRQLnLQtfIxz4CrQcpRGSX6dVwmNEQuBwISyAlF0280_u8Pk7LrQ4/p.jpeg?size=1280x960&size_mode=3)
+
+## Separate the positive number and negetive number
+To see the increase and decrease clearly in the mapbox, I separate the positive number and negeitive number in order to add two layer.
+![7](https://previews.dropbox.com/p/thumb/AALjrBIKnrqHWz4gAh7ZEYc2Don4wEoYmzgQJY1DJWsTj3gw8KNga_m62ftT6SBDSsTrzcmvBUKEqn3awUwSzwCHJTPHr_i39jyEyCl-4pthF1AyH67tdB4F8BtuYfXbFtT_F9Q1XbDJImdLJfUxdlJl4RPKQK14AkLhXsnehpoXZIeev3v82piIFQOKdwEhUWk/p.jpeg?size=1280x960&size_mode=3)
+![8](https://previews.dropbox.com/p/thumb/AAKeQNvIaIU8nclEePiOq4nlqIawnpUaqxrMaanx-LACy95a7njgfWtd1z-nFssogy-pfAOz5-9etjoRRPQUxL_crL57cHNlLJXEcoyaav_sDauXPapqUJj643cLbbPdCrEKBmyUtQB0Y1MTo3hDnjET0F7Dhh2WxHucJy4aGunlHucQF1wGhTbuBNlsIcsD90g/p.jpeg?size=1280x960&size_mode=3)
+
+Then I separated postive number and negative number and make them become two files and turn the all the negative number become positive so that it can display the extrusion i mapbox more clearly.
+![9](https://previews.dropbox.com/p/thumb/AALJuY_Cozc41JiTCpsD3vHbl_PpfpuTAG6sZmGPwlnw7tR0P_x7a4UB94Yrz4AVorwSVbG0DfhkIaHUczpwXwS6aDs-iA0kb7yt6Z88FqaKk1xXkOpJ3ZqFDJfm1dhaJ8nj8E-DzRfHUsS65yms0MjT0X6awr_REYFysXiyp4Pgs52SiDmVim5EYTeRlerYXjY/p.jpeg?size=1280x960&size_mode=3)
+
+##
+Then these two files can be added into QGIS and export geojson to display the 3D Map.
+
+
+
+
+
 
     
