--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -21,7 +21,7 @@ Firstly, G24 is a dataset about the number of children ever born.
 ![EXCELSCREENSHOT](https://previews.dropbox.com/p/thumb/AAIz4q-DxmxfFu8KnGE0G9b5cXVXifGB3PbX0t1y7DulMO8EQzHlHKqWZE57Da094r3yNVdLQ2WYRTje-PP0INR3Zgt5U6ZEdAfm64zXYrRxKwAtugu2AaRD44eghjJF2NCrBaBUANBCvcNmxGvq35e31YnXiiWpa_CWAgynWt7PkhY7jq2LidOieLnRBDo9C4Q/p.jpeg?size=1280x960&size_mode=3)
 In this picture, it can be seen that there are the data of number of children ever born by the age group so that the first thing I do is use the number of parent that ever born multiply the number of children they ever born. 
 
-For example
+Example:
 ![2](https://previews.dropbox.com/p/thumb/AAIrBgX4v2Cu1_Pb6cFnksfRuNKFGHY8OKQ7z9zQV5RZGwOGWfaGkinzalBQ97kLjmChV595HoNF8b3IOFg3DUI8sACjYMOuKsaSQgWLB1hy9UX7ovMrcWxsnaRkovwAd1skLus-rpMY84G7Nur_sz4cu2BQO7Fpg_qC-JSPXe2DHg/p.jpeg?size=1280x960&size_mode=3)
 
 Then, sum the number of the children ever born to get the total children they ever born in each region and do the same steps in both 2011 and 2016's G24. In this way, you will get the total number of children ever born in each region. By minus them, the new born children in each region will be shown.
@@ -41,8 +41,8 @@ Then, I deleted the dataset of 2011 and minus them to get the result of comparis
 
 ## Separate the positive number and negetive number
 To see the increase and decrease clearly in the mapbox, I separate the positive number and negeitive number in order to add two layer.
-![7](https://previews.dropbox.com/p/thumb/AALjrBIKnrqHWz4gAh7ZEYc2Don4wEoYmzgQJY1DJWsTj3gw8KNga_m62ftT6SBDSsTrzcmvBUKEqn3awUwSzwCHJTPHr_i39jyEyCl-4pthF1AyH67tdB4F8BtuYfXbFtT_F9Q1XbDJImdLJfUxdlJl4RPKQK14AkLhXsnehpoXZIeev3v82piIFQOKdwEhUWk/p.jpeg?size=1280x960&size_mode=3)
-![8](https://previews.dropbox.com/p/thumb/AAKeQNvIaIU8nclEePiOq4nlqIawnpUaqxrMaanx-LACy95a7njgfWtd1z-nFssogy-pfAOz5-9etjoRRPQUxL_crL57cHNlLJXEcoyaav_sDauXPapqUJj643cLbbPdCrEKBmyUtQB0Y1MTo3hDnjET0F7Dhh2WxHucJy4aGunlHucQF1wGhTbuBNlsIcsD90g/p.jpeg?size=1280x960&size_mode=3)
+![7](https://previews.dropbox.com/p/thumb/AALiqTbGtXvi7B521xpaqEgHBP9HEPaBpUQqyb0f03nS9b4DPNMkGcD4vF9yZQ9pvDJDBf-j6a1FYxBYJlkAgR85L1neheibVcbSKe_bi9c2dQS-RsC_S56nKTT1WziTU3pM3HEXKN9apVWGf3zdMnNmHP4QXL95uj6USt5d9l4cJW73iHPSxne3vy8AfFz6Wfo/p.jpeg?size=1280x960&size_mode=3)
+![8](https://previews.dropbox.com/p/thumb/AAJBuaUWRlDbAxdTChh_N_YZyzWnUaJgDMJRlQfhg1tSXFM4AJ_JltPaDWP3FXa84Taj2lCowik59SXrdMZj9UZlL75QtilEg2L_tb7v9W_PD18DZ5i9i7NEwolc5u1R0sC4AiPSN4ck0DGaZOhq0QlSWfwox960zbmSglHRaXnd6OS_693IDFz3KPoLDrpbZYg/p.jpeg?size=1280x960&size_mode=3)
 
 Then I separated postive number and negative number and make them become two files and turn the all the negative number become positive so that it can display the extrusion i mapbox more clearly.
 ![9](https://previews.dropbox.com/p/thumb/AALJuY_Cozc41JiTCpsD3vHbl_PpfpuTAG6sZmGPwlnw7tR0P_x7a4UB94Yrz4AVorwSVbG0DfhkIaHUczpwXwS6aDs-iA0kb7yt6Z88FqaKk1xXkOpJ3ZqFDJfm1dhaJ8nj8E-DzRfHUsS65yms0MjT0X6awr_REYFysXiyp4Pgs52SiDmVim5EYTeRlerYXjY/p.jpeg?size=1280x960&size_mode=3)
