--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -9,13 +9,13 @@ catalog: true
 tags:
     - ASS2
 ---
-# **Data Analysis Web**
+# **1-Data Analysis Web**
 [Data Analysis](https://www.ass2.jonathan1230.top/analysis)
 
-# **Analysis method**
+# **2-Analysis method**
 In this page, you will know the method for processing raw data which has been used in [Data Analysis](https://www.ass2.jonathan1230.top/analysis) step by step.
 
-# **Process G24 in 2011 and 2016**
+# **2.1-Process G24 in 2011 and 2016**
 Firstly, G24 is a dataset about the number of children ever born.
 
 ![EXCELSCREENSHOT](https://previews.dropbox.com/p/thumb/AAIz4q-DxmxfFu8KnGE0G9b5cXVXifGB3PbX0t1y7DulMO8EQzHlHKqWZE57Da094r3yNVdLQ2WYRTje-PP0INR3Zgt5U6ZEdAfm64zXYrRxKwAtugu2AaRD44eghjJF2NCrBaBUANBCvcNmxGvq35e31YnXiiWpa_CWAgynWt7PkhY7jq2LidOieLnRBDo9C4Q/p.jpeg?size=1280x960&size_mode=3)
@@ -50,7 +50,7 @@ Then I separated postive number and negative number and make them become two fil
 ## Add two layers in to MapBox
 Then these two files can be added into QGIS and export geojson to display the 3D Map.
 
-# **Process G28 in 2011 and 2016**
+# **2.2-Process G28 in 2011 and 2016**
 Firstly, G28 is about the total family income (weekly) by family composition.
 
 ![1](https://previews.dropbox.com/p/thumb/AALsvUTiTeBX962VX1GT2jGVORYQfqUdsmtmxY82DrF2DpPAsCxLpC9ppuu7klsr2cJx_fyhEUx-6gsYHrhas1eBHXmRGX4XrCp6_3SyuTqGTWqzt8Qx56vjKsDJw9qSB7TSM6sO7m_UiQiG7YsonKrzq7ToHzF3rlt_rW0rvACiNLxMga7cchuD6r2SF_GJ9kM/p.jpeg?size=1600x1200&size_mode=3)
@@ -98,7 +98,7 @@ Then, separate the positive number and negetive number by the method I have ment
 ## Meaning of this comparison
 Because we used numbers to represent each income class, if we minus them, we can see the "Income Increase Trend" of each region. If the result is positive, it means the income class in this region has been moved to a higher level, and vice versa.
 
-# **Further analysis**
+# **2.3-Further analysis**
 Here is the g24 and g28 of the comparison data before separeting them.
 ![13](https://previews.dropbox.com/p/thumb/AALXstoLRKDYm3AQ_Isg3p0x8FBr6tyNCIOR-JdVL6nk8OLQTk6CtxBLDF-pEmwiBwnVWqYRWXaxYwVgcgyW5Sn93N6wcIsyDoT13eOH2QZCXKwC8j3drX66sQEDu23MiKlCpBc2-INlXvCm-5U2PEzSjeWDPFIzCIf47w7aOcYT_0RtOCkAgDoukY5m59ps12I/p.jpeg?size=1600x1200&size_mode=3)
 
