--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -26,7 +26,7 @@ Example:
 
 Then, sum the number of the children ever born to get the total children they ever born in each region and do the same steps in both 2011 and 2016's G24. In this way, you will get the total number of children ever born in each region. By minus them, the new born children in each region will be shown.
 
-## How to minus the data
+## 2.1.1-How to minus the data
 Because of there are some missing region in 2011_g24, which means they can not simply minus the data by the order of column.
 ![3](https://previews.dropbox.com/p/thumb/AAIKKnH0wLx_DH96TQ2pbr4hHIus0_ONmhHzq1F9WGd8cCk3epxMThvtSwxM5CsERPRIKuM0iVAHepHnFbcneybuKIBj0cyVGdkWeL7cRz3YBuMc7hKepJPVTpuYcLjRgp6BKcahPfT9QhzbVDp3sAVLazUZXRI2czPAf8L2cxRgWRSKecK-bLA76KMy--Oh3cA/p.jpeg?size=1280x960&size_mode=3)
 
@@ -39,7 +39,7 @@ Now, all the data from 2011 has been filled in the right place by the order of r
 Then, I deleted the dataset of 2011 and minus them to get the result of comparison.
 ![6](https://previews.dropbox.com/p/thumb/AAJvDihzE5vAdMPsA1Vaw53DcHQIBfuLJMIJO9NAEmIsr7lVNYKNmuzv_DRICn2YovoPqbs4ro0njRCMJ3RAVQcHvWGiEJEb_v2QTM_KOXEKVfmHDknSZj_KH0SYygyQx6686Bk_e8Xd5UVRQLnLQtfIxz4CrQcpRGSX6dVwmNEQuBwISyAlF0280_u8Pk7LrQ4/p.jpeg?size=1280x960&size_mode=3)
 
-## Separate the positive number and negative number
+## 2.1.2-Separate the positive number and negative number
 To see the increase and decrease clearly in the mapbox, I separate the positive number and negaitive number in order to add two layer.
 ![7](https://previews.dropbox.com/p/thumb/AALiqTbGtXvi7B521xpaqEgHBP9HEPaBpUQqyb0f03nS9b4DPNMkGcD4vF9yZQ9pvDJDBf-j6a1FYxBYJlkAgR85L1neheibVcbSKe_bi9c2dQS-RsC_S56nKTT1WziTU3pM3HEXKN9apVWGf3zdMnNmHP4QXL95uj6USt5d9l4cJW73iHPSxne3vy8AfFz6Wfo/p.jpeg?size=1280x960&size_mode=3)
 ![8](https://previews.dropbox.com/p/thumb/AAJBuaUWRlDbAxdTChh_N_YZyzWnUaJgDMJRlQfhg1tSXFM4AJ_JltPaDWP3FXa84Taj2lCowik59SXrdMZj9UZlL75QtilEg2L_tb7v9W_PD18DZ5i9i7NEwolc5u1R0sC4AiPSN4ck0DGaZOhq0QlSWfwox960zbmSglHRaXnd6OS_693IDFz3KPoLDrpbZYg/p.jpeg?size=1280x960&size_mode=3)
@@ -47,7 +47,7 @@ To see the increase and decrease clearly in the mapbox, I separate the positive 
 Then I separated postive number and negative number and make them become two files and turn the all the negative number become positive so that it can display the extrusion i mapbox more clearly.
 ![9](https://previews.dropbox.com/p/thumb/AALJuY_Cozc41JiTCpsD3vHbl_PpfpuTAG6sZmGPwlnw7tR0P_x7a4UB94Yrz4AVorwSVbG0DfhkIaHUczpwXwS6aDs-iA0kb7yt6Z88FqaKk1xXkOpJ3ZqFDJfm1dhaJ8nj8E-DzRfHUsS65yms0MjT0X6awr_REYFysXiyp4Pgs52SiDmVim5EYTeRlerYXjY/p.jpeg?size=1280x960&size_mode=3)
 
-## Add two layers in to MapBox
+## 2.1.3-Add two layers in to MapBox
 Then these two files can be added into QGIS and export geojson to display the 3D Map.
 
 # **2.2-Process G28 in 2011 and 2016**
@@ -56,7 +56,7 @@ Firstly, G28 is about the total family income (weekly) by family composition.
 ![1](https://previews.dropbox.com/p/thumb/AALsvUTiTeBX962VX1GT2jGVORYQfqUdsmtmxY82DrF2DpPAsCxLpC9ppuu7klsr2cJx_fyhEUx-6gsYHrhas1eBHXmRGX4XrCp6_3SyuTqGTWqzt8Qx56vjKsDJw9qSB7TSM6sO7m_UiQiG7YsonKrzq7ToHzF3rlt_rW0rvACiNLxMga7cchuD6r2SF_GJ9kM/p.jpeg?size=1600x1200&size_mode=3)
 In this picture, it shows that the family weekly income during each income class with each different family background and I will only use the family income total.
 
-## Simplify the income class
+## 2.2.1-Simplify the income class
 First, I sum the number of people in each income group.
 ![2](https://previews.dropbox.com/p/thumb/AALp0bKrHO-mv47MiFiHS91ao0HJk-8jil7QMPQFOQrUKvQ1JxSXxpmirrGKbP0uprPzt--aF9S705rXkaWWRgq0bUTzR8ABuxWhLOyanbLV4SAGkzpuC7Xwg5VKaJz7ZhFTW6J-DA8P09tdpJqaOOsk4c6vGVD4wXMHNlzUwNEwiy2NxkNcbBKAZySxKIASuQE/p.jpeg?size=1600x1200&size_mode=3)
 Then, based on these data, I made a graph.
@@ -68,7 +68,7 @@ Example:
 Once finish the simplify,it will show like this.
 ![5](https://previews.dropbox.com/p/thumb/AAK9j8IM3iRrIYJcGBans6CL-y2OH9aBAQII4vIhZ8g-Xz9XTrlHAYqolAJ4Jw69jAPCTzvLT26_FZONmhHA6jpGxgUvXI650H2VpoRDObuezUmuczm7WSmtOgA9aTdm2n5Fvc9qOlaFMpjT91Xf4-TbrM7BLlhbSmCIMRDnA_ORdOiENLwUzVIOURCbM77ApIk/p.jpeg?size=1600x1200&size_mode=3)
 
-## Find the highest proportion in each region
+## 2.2.2-Find the highest proportion in each region
 Now, I am going to get the total number of people in the region by summing all the people in different income group in this region.
 ![6](https://previews.dropbox.com/p/thumb/AAL5v-Mfxj9tb3gh9jVZOQgmDyi9_G6dYzH7G_Lo7MLZppb9GXiCe3Kmdwm_3kX29LeGhBfsvndzXzOPW2MfMMGYdxfT3CYxFmyo6-aKh8PjkIn-KUkvjiq37qB6giB8lDTKeH_fumkuhjz-oW1h1Wp84EsgbgD8nLSjcpb6R4HwzXGIy3-tgHo7eIekunPLTcI/p.jpeg?size=1600x1200&size_mode=3)
 
@@ -84,7 +84,7 @@ At last, I need to fine this highest proportion represent which income class. He
 
 Do the same steps in the G28 in 2011 and 2016.
 
-## Compare the data in 2011 and 2016.
+## 2.2.3-Compare the data in 2011 and 2016.
 First, minus the number which can represent the highest proportion in each region in 2011 and 2016. 
 
 Because there is some missing region in 2011, we can not just minus the data by the order of region_id so that we need to do the same steps in "How to minus the data", which I have mentioned in the first half of this web or you can click "How to minus the data" at the right of the website in the "CATALOG".
@@ -95,7 +95,7 @@ Here is the data after minus them.
 Then, separate the positive number and negetive number by the method I have mentioned and make them become two files, then, turn the negative number to postive number which can show a more clearly MapBox.
 ![12](https://previews.dropbox.com/p/thumb/AAJySNSukd-bopjRmcWPnKJw1JI_gs-6OhcYIPoz2wxkamV2pz6TxJY1Wz2DOSwcGffvp-QUzG7RdL1__HQU5-_GW_dcY-OhgghvXeY62wnuiGDIugmFzZD74rBsngYAO_CvpLUuFGw-5LWBA1JT7RPT-EUsjNEu6LUIk5gFQnDuMDqn6vYG1U-9snnUsGco8wY/p.jpeg?size=1600x1200&size_mode=3)
 
-## Meaning of this comparison
+## 2.2.4-Meaning of this comparison
 Because we used numbers to represent each income class, if we minus them, we can see the "Income Increase Trend" of each region. If the result is positive, it means the income class in this region has been moved to a higher level, and vice versa.
 
 # **2.3-Further analysis**
