--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -4,7 +4,7 @@ title:      Data Analysis
 subtitle:   Assignment 2
 date:       2018-09-12
 author:     Jonathan
-header-img: img\post-bg-debug-1.png
+header-img: https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/post-bg-debug-1.png?raw=true
 catalog: true
 tags:
     - ASS2
