--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -18,34 +18,34 @@ In this page, you will know the method for processing raw data which has been us
 # **2.1-Process G24 in 2011 and 2016**
 Firstly, G24 is a dataset about the number of children ever born.
 
-![EXCELSCREENSHOT](https://previews.dropbox.com/p/thumb/AAIz4q-DxmxfFu8KnGE0G9b5cXVXifGB3PbX0t1y7DulMO8EQzHlHKqWZE57Da094r3yNVdLQ2WYRTje-PP0INR3Zgt5U6ZEdAfm64zXYrRxKwAtugu2AaRD44eghjJF2NCrBaBUANBCvcNmxGvq35e31YnXiiWpa_CWAgynWt7PkhY7jq2LidOieLnRBDo9C4Q/p.jpeg?size=1280x960&size_mode=3)
+![EXCELSCREENSHOT](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/1.jpg?raw=true)
 In this picture, it can be seen that there are the data of number of children ever born by the age group so that the first thing I do is use the number of parent that ever born multiply the number of children they ever born. 
 
 Example:
-![2](https://previews.dropbox.com/p/thumb/AAIApvKKvJhc3Bgk0kCQ_xXRchMBBrv4F5umCP5o9-fH3HxltAEYdLm4QHQmuvRfdi-WghtLPbvc1loOIBc47Q7wieWRa-JpC3I4qCDWY7RKEi6Q9g94Aj4Bho_abRVD4aRzP5vQipTogRPZ8-rUROtmhyr9iNppyvHXpS0hgyjPUQ/p.jpeg?size=1600x1200&size_mode=3)
+![2](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/2.jpg?raw=true)
 
 Then, sum the number of the children ever born to get the total children they ever born in each region and do the same steps in both 2011 and 2016's G24. In this way, you will get the total number of children ever born in each region. By minus them, the new born children in each region will be shown.
 
 ## 2.1.1-How to minus the data
 Because of there are some missing region in 2011_g24, which means they can not simply minus the data by the order of column.
-![3](https://previews.dropbox.com/p/thumb/AAIKKnH0wLx_DH96TQ2pbr4hHIus0_ONmhHzq1F9WGd8cCk3epxMThvtSwxM5CsERPRIKuM0iVAHepHnFbcneybuKIBj0cyVGdkWeL7cRz3YBuMc7hKepJPVTpuYcLjRgp6BKcahPfT9QhzbVDp3sAVLazUZXRI2czPAf8L2cxRgWRSKecK-bLA76KMy--Oh3cA/p.jpeg?size=1280x960&size_mode=3)
+![3](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/3.jpg?raw=true)
 
 In this way, i will use VLookup Function to match the data by the region first.
-![4](https://previews.dropbox.com/p/thumb/AAJ35JbeeJmo9RanPU-AFhoPAnUOYO63QWCsU9VyWSjRkCKShitwfktYe3Atu4dENHXlcZJwuFAcw5g4lJZBf2ANCs0ZnGXl4Ej6dz_hKgeujO3_7DDK9z2h4diFYHydTp__cWaPFfZc7ZC9HqZkyrYcNMSaGE0kvAj72Lr-GHhygRGtpJcvqKRHT40FiTVCLnw/p.jpeg?size=1280x960&size_mode=3)
+![4](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/4.jpg?raw=true)
 
 Now, all the data from 2011 has been filled in the right place by the order of region_id. 
-![5](https://previews.dropbox.com/p/thumb/AAKx0Ro24_Bj4VAX3bFTeHr332r7CIrijSZfximpcTcc0SkKsrU1Tai5HeYhQm0AcY4la0bkXVdS17Lbs9g-fp-4YCepKv2PS5vSjYquoJI69_qJ4j52K2gbsyfrD3C0Heib9ISvcqc39_BVEYsTTuMYuB8kGz16ZLarDHx7QGkbmGgmfdBMmur8eKZeImBE9uM/p.jpeg?size=1280x960&size_mode=3)
+![5](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/5.jpg?raw=true)
 
 Then, I deleted the dataset of 2011 and minus them to get the result of comparison.
-![6](https://previews.dropbox.com/p/thumb/AAJvDihzE5vAdMPsA1Vaw53DcHQIBfuLJMIJO9NAEmIsr7lVNYKNmuzv_DRICn2YovoPqbs4ro0njRCMJ3RAVQcHvWGiEJEb_v2QTM_KOXEKVfmHDknSZj_KH0SYygyQx6686Bk_e8Xd5UVRQLnLQtfIxz4CrQcpRGSX6dVwmNEQuBwISyAlF0280_u8Pk7LrQ4/p.jpeg?size=1280x960&size_mode=3)
+![6](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/6.jpg?raw=true)
 
 ## 2.1.2-Separate the positive number and negative number
 To see the increase and decrease clearly in the mapbox, I separate the positive number and negaitive number in order to add two layer.
-![7](https://previews.dropbox.com/p/thumb/AALiqTbGtXvi7B521xpaqEgHBP9HEPaBpUQqyb0f03nS9b4DPNMkGcD4vF9yZQ9pvDJDBf-j6a1FYxBYJlkAgR85L1neheibVcbSKe_bi9c2dQS-RsC_S56nKTT1WziTU3pM3HEXKN9apVWGf3zdMnNmHP4QXL95uj6USt5d9l4cJW73iHPSxne3vy8AfFz6Wfo/p.jpeg?size=1280x960&size_mode=3)
-![8](https://previews.dropbox.com/p/thumb/AAJBuaUWRlDbAxdTChh_N_YZyzWnUaJgDMJRlQfhg1tSXFM4AJ_JltPaDWP3FXa84Taj2lCowik59SXrdMZj9UZlL75QtilEg2L_tb7v9W_PD18DZ5i9i7NEwolc5u1R0sC4AiPSN4ck0DGaZOhq0QlSWfwox960zbmSglHRaXnd6OS_693IDFz3KPoLDrpbZYg/p.jpeg?size=1280x960&size_mode=3)
+![7](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/7.jpg?raw=true)
+![8](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/8.jpg?raw=true)
 
 Then I separated postive number and negative number and make them become two files and turn the all the negative number become positive so that it can display the extrusion i mapbox more clearly.
-![9](https://previews.dropbox.com/p/thumb/AALJuY_Cozc41JiTCpsD3vHbl_PpfpuTAG6sZmGPwlnw7tR0P_x7a4UB94Yrz4AVorwSVbG0DfhkIaHUczpwXwS6aDs-iA0kb7yt6Z88FqaKk1xXkOpJ3ZqFDJfm1dhaJ8nj8E-DzRfHUsS65yms0MjT0X6awr_REYFysXiyp4Pgs52SiDmVim5EYTeRlerYXjY/p.jpeg?size=1280x960&size_mode=3)
+![9](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/9.jpg?raw=true)
 
 ## 2.1.3-Add two layers in to MapBox
 Then these two files can be added into QGIS and export geojson to display the 3D Map.
@@ -53,34 +53,34 @@ Then these two files can be added into QGIS and export geojson to display the 3D
 # **2.2-Process G28 in 2011 and 2016**
 Firstly, G28 is about the total family income (weekly) by family composition.
 
-![1](https://previews.dropbox.com/p/thumb/AALsvUTiTeBX962VX1GT2jGVORYQfqUdsmtmxY82DrF2DpPAsCxLpC9ppuu7klsr2cJx_fyhEUx-6gsYHrhas1eBHXmRGX4XrCp6_3SyuTqGTWqzt8Qx56vjKsDJw9qSB7TSM6sO7m_UiQiG7YsonKrzq7ToHzF3rlt_rW0rvACiNLxMga7cchuD6r2SF_GJ9kM/p.jpeg?size=1600x1200&size_mode=3)
+![1](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/1.jpg?raw=true)
 In this picture, it shows that the family weekly income during each income class with each different family background and I will only use the family income total.
 
 ## 2.2.1-Simplify the income class
 First, I sum the number of people in each income group.
-![2](https://previews.dropbox.com/p/thumb/AALp0bKrHO-mv47MiFiHS91ao0HJk-8jil7QMPQFOQrUKvQ1JxSXxpmirrGKbP0uprPzt--aF9S705rXkaWWRgq0bUTzR8ABuxWhLOyanbLV4SAGkzpuC7Xwg5VKaJz7ZhFTW6J-DA8P09tdpJqaOOsk4c6vGVD4wXMHNlzUwNEwiy2NxkNcbBKAZySxKIASuQE/p.jpeg?size=1600x1200&size_mode=3)
+![2](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/2.jpg?raw=true)
 Then, based on these data, I made a graph.
-![3](https://previews.dropbox.com/p/thumb/AAKl7OQ9J64__J227ABXBcvx78HM_OyQcvIcgXGNAqDmuFQdAqdbfl7MrN4pDTIJ7Uxspqxmenq6ZFKaqOAWNLZiLL4BTwyW-1t6r-S2lo-CXkpgNvkMutOQo79dRC_gY8lriX_du3m6Gt4mzrXMpvriOWXONuCZuoIwL1GhhUl9UeL7TFMlev6kg6N5OylfEu8/p.jpeg?size=1600x1200&size_mode=3)
+![3](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/3.jpg?raw=true)
 From this graph, the middle groups are 1000-1249 and 1250-1499 so that I decided that 1-999 is the low income class and 1000-1999 is the middle income class and 2000-more is the high income class. To simplify the income class, it just needs to sum the data by each group.
 Example:
-![4](https://previews.dropbox.com/p/thumb/AAKMFNiym4jayFDRUhWB_T4V3fq0YROHiILgJWl3CmgY-aNuWtWGEnJuzsJtqR2MxmPR7SFZl-KKB2u674WZ_Z_hPSOYEKCa7Ufeh0JRkgnblFSwIQv3tEpW5-W2XMcVEIBHfZjw6lhWsx6-Y1q_xH2OGHXmBHzpb0M156tiqrPOWBUYAMGAEJESZFIBJ_I5jOg/p.jpeg?size=1600x1200&size_mode=3)
+![4](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/4.jpg?raw=true)
 
 Once finish the simplify,it will show like this.
-![5](https://previews.dropbox.com/p/thumb/AAK9j8IM3iRrIYJcGBans6CL-y2OH9aBAQII4vIhZ8g-Xz9XTrlHAYqolAJ4Jw69jAPCTzvLT26_FZONmhHA6jpGxgUvXI650H2VpoRDObuezUmuczm7WSmtOgA9aTdm2n5Fvc9qOlaFMpjT91Xf4-TbrM7BLlhbSmCIMRDnA_ORdOiENLwUzVIOURCbM77ApIk/p.jpeg?size=1600x1200&size_mode=3)
+![5](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/5.jpg?raw=true)
 
 ## 2.2.2-Find the highest proportion in each region
 Now, I am going to get the total number of people in the region by summing all the people in different income group in this region.
-![6](https://previews.dropbox.com/p/thumb/AAL5v-Mfxj9tb3gh9jVZOQgmDyi9_G6dYzH7G_Lo7MLZppb9GXiCe3Kmdwm_3kX29LeGhBfsvndzXzOPW2MfMMGYdxfT3CYxFmyo6-aKh8PjkIn-KUkvjiq37qB6giB8lDTKeH_fumkuhjz-oW1h1Wp84EsgbgD8nLSjcpb6R4HwzXGIy3-tgHo7eIekunPLTcI/p.jpeg?size=1600x1200&size_mode=3)
+![6](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/6.jpg?raw=true)
 
 Then, I am going to calculate each percentage by each simplified income class. 
-![7](https://previews.dropbox.com/p/thumb/AAJt7vc4313TyNop4UGTdK1zWL-fTYV9Cvczmt7dwFLKEVstv3VEmIn8WTa7Zl-ADNJi_hAm4Dy9Tk5XObTKh93ow0KSpoWHr5uQOdGWQvZ2RB6H_l5Th3rw66pmTXsQIvK4gauYRWfXUQboi2RWlLZHvwbmv6rEqmxRMJBVVxhJOi7ik-0Jx5Eb2VvMLUnvN5U/p.jpeg?size=1600x1200&size_mode=3)
-![8](https://previews.dropbox.com/p/thumb/AAJPAkn0qxONQgiLlsb4AlA34vCblA4fzVKCL_XnZ4TxHs5IhKCaCo8UtTvOyuGVd8QpEzsy6Ivw66kALXEe99RCCC0jXMPnbT9f7F3gMO8CAa84N8kuhGSR7oYhjJTvWXrDJ7zPOczb86MXXShbHZ73mlpH-liGFgG4hy7HAawJ7C048_qDbUpxMYwc5XrDI2E/p.jpeg?size=1600x1200&size_mode=3)
+![7](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/7.jpg?raw=true)
+![8](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/8.jpg?raw=true)
 
 Now, use Max Function to find the highest proportion in this region.
-![9](https://previews.dropbox.com/p/thumb/AAJA3yt8TEjSfRlF3HkNDs8ptmTQlnxwMnu6Gbq0ldr0NF0nJRQe3Z_tCtozkWq53QTg1VbrC9CABuuS-l7MeudYO7TI5HiyO8i2VBFMobzbUbW_bhGZ4d2VVHJjcmM3osbJ6315sg2n5rfSDqWKH2ydfseHEDS8hP2vH5fWsWBCpCH7Z1ubzSvO2ZEYEpMqa0g/p.jpeg?size=1600x1200&size_mode=3)
+![9](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/9.jpg?raw=true)
 
 At last, I need to fine this highest proportion represent which income class. Here, I am going to use "1" to represent "Low income class", "2" to represent "Middle income class" and "3" to represent "High income class". In this way, if the highest proportion is "Low income class", it will show the number "1".
-![10](https://previews.dropbox.com/p/thumb/AAKYZDJofXISqGBq9GFGWxkzTfP3b-qmroxjBwRmtnnJTTgu660EfNvcxRcgFxGdck2k92Tel7D7Kqro4OE6Ay45O7o3-DR1A-jrPXHujY-M6_sEYdh5AuVeHK4HgSXmHxH3qhbQpeZ1AJpCSibqnZ7s59Km91FrUTYrr8b5XmC0qsq9OwmXNgXj-UQhud9jIaM/p.jpeg?size=1600x1200&size_mode=3)
+![10](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/10.jpg?raw=true)
 
 Do the same steps in the G28 in 2011 and 2016.
 
@@ -90,25 +90,25 @@ First, minus the number which can represent the highest proportion in each regio
 Because there is some missing region in 2011, we can not just minus the data by the order of region_id so that we need to do the same steps in "How to minus the data", which I have mentioned in the first half of this web or you can click "How to minus the data" at the right of the website in the "CATALOG".
 
 Here is the data after minus them.
-![11](https://previews.dropbox.com/p/thumb/AAKN3sJXzjOUPmv7ecfot8iT6mlZZC7B_dZEv3rGppx9ksKrZf0pHWKdV_pPrTPWEe0jILyUK55co0XYUufbNuChYjPpjsYkHk6nBeKtaQRWInK7Uq52wXglL9YyeJOwdkUdTFtQtEFjyQOQmQWLOg37q3Mq2wTTBYdlTO33XDO8Jw/p.jpeg?size=1600x1200&size_mode=3)
+![11](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/11.jpg?raw=true)
 
 Then, separate the positive number and negetive number by the method I have mentioned and make them become two files, then, turn the negative number to postive number which can show a more clearly MapBox.
-![12](https://previews.dropbox.com/p/thumb/AAJySNSukd-bopjRmcWPnKJw1JI_gs-6OhcYIPoz2wxkamV2pz6TxJY1Wz2DOSwcGffvp-QUzG7RdL1__HQU5-_GW_dcY-OhgghvXeY62wnuiGDIugmFzZD74rBsngYAO_CvpLUuFGw-5LWBA1JT7RPT-EUsjNEu6LUIk5gFQnDuMDqn6vYG1U-9snnUsGco8wY/p.jpeg?size=1600x1200&size_mode=3)
+![12](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/12.jpg?raw=true)
 
 ## 2.2.4-Meaning of this comparison
 Because we used numbers to represent each income class, if we minus them, we can see the "Income Increase Trend" of each region. If the result is positive, it means the income class in this region has been moved to a higher level, and vice versa.
 
 # **2.3-Further analysis**
 Here is the g24 and g28 of the comparison data before separeting them.
-![13](https://previews.dropbox.com/p/thumb/AALXstoLRKDYm3AQ_Isg3p0x8FBr6tyNCIOR-JdVL6nk8OLQTk6CtxBLDF-pEmwiBwnVWqYRWXaxYwVgcgyW5Sn93N6wcIsyDoT13eOH2QZCXKwC8j3drX66sQEDu23MiKlCpBc2-INlXvCm-5U2PEzSjeWDPFIzCIf47w7aOcYT_0RtOCkAgDoukY5m59ps12I/p.jpeg?size=1600x1200&size_mode=3)
+![13](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/13.jpg?raw=true)
 
 Now, I am going to divide them by each region. If the result is postive, it means if the family income increases, the new born rate will also increase, and vice versa.
-![14](https://previews.dropbox.com/p/thumb/AALwpRZq2jnnn75tUI9qnwiK8HL1jddsVHzfZ439vQBYxtOuEgVEu-F0kvBtXySgmuZSwSxXf_3hcrTiErg_4sm91WTQRIWZ8KZ-z94hVkUPYkrrIzBaLdGeXcXbwAxZUdDKILMKesk-5bjdtenYAXJrREQLU5-OzI89LWCJx3sLffYhFL0mNk7I1qDXyObAov0/p.jpeg?size=1600x1200&size_mode=3)
+![14](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/14.jpg?raw=true)
 
 Then, separate the positive result and negative result into two files so that when these come to the MapBox, it can be shown more clearly.
 
 At last, by looking the total number of lines in positive result file and negative result (We need to use the number of total lines -1, because the first line is for the remark for the column.), we can calculate how many trend works and find the percentage.
-![15](https://previews.dropbox.com/p/thumb/AAIeD3GVkLfJI69tTb2IqOJkI3xR1RbC1dVIkaPMQe4BCE4Fg7avSefcUqwEg0BRHg38eqYLPhFd01H_wsVoyU71v7mnYywDygcTrRLGPfcZqJXHkuJd_7Qo-gPJEBA9BVSSS-2ZnfSs6BIiGgU_HdL9uj1A8JlM1Xg3fYmocMODPBCLTZOuOySDjZSNBaFZqf1A2B5GspDqa_KD494q9ry5oc5w8mlastNKeub3n6ZVMQ/p.jpeg?size=1600x1200&size_mode=3)
+![15](https://github.com/grasscaograss/grasscaograss.github.io/blob/master/img/2018-09-12-ASS2/Map2/15.jpg?raw=true)
 
 In this way, it is 3216 to 16184 so that the percentage of "matched trend" is 83%, which means this relationship (If the family income increases, the new born rate will also increase, and vice versa.) works in general.
 
