--- a/_posts/2018-09-04-ASS2.md
+++ b/_posts/2018-09-04-ASS2.md
@@ -10,10 +10,10 @@ tags:
     - ASS2
 ---
 # **1-Data Analysis Web**
-[Data Analysis](https://www.ass2.jonathan1230.top/analysis)
+[Data Analysis](https://www.ass2.jonathan1230.top)
 
 # **2-Analysis method**
-In this page, you will know the method for processing raw data which has been used in [Data Analysis](https://www.ass2.jonathan1230.top/analysis) step by step.
+In this page, you will know the method for processing raw data which has been used in [Data Analysis](https://www.ass2.jonathan1230.top) step by step.
 
 # **2.1-Process G24 in 2011 and 2016**
 Firstly, G24 is a dataset about the number of children ever born.
